--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -206,3 +206,4 @@ iberian_trade:0 "Iberian Trade"
 Defense_of_the_Rus:0 "Defense of the Rus"
 Ahead_of_time:0 "Ahead of Time"
 russian_consolidation:0 "Russian Consolidation"
+gecko_ipa:0 "Favourable Lending Terms"
