--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -184,6 +184,7 @@ defense_of_burgundy:0 "Repulse the English"
 swabian_trade:0 "Swabian Trade"
 
 too_many_subjects:0 "Too Many Subjects"
+too_many_subjects_influence:0 "Too Many Subjects - Influence Ideas"
 
 #Critical Province
 critical_province:0 "Critical Province"
