--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -208,3 +208,4 @@ Defense_of_the_Rus:0 "Defense of the Rus"
 Ahead_of_time:0 "Ahead of Time"
 russian_consolidation:0 "Russian Consolidation"
 gecko_ipa:0 "Favourable Lending Terms"
+gecko_tackle_debt_timer_2:0 "Economic Recovery"
