--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -88,3 +88,5 @@ splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Force
 
 Show_Merc_limit_title:0 "Show Mercenary Forcelimit"
 Show_Merc_limit_desc:0 "This is our Mercenary Forcelimit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
+gecko_merc_limit_tt:0 "Manually Update Mercenary Forcelimit"
+				
