--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -209,3 +209,5 @@ Ahead_of_time:0 "Ahead of Time"
 russian_consolidation:0 "Russian Consolidation"
 gecko_ipa:0 "Favourable Lending Terms"
 gecko_tackle_debt_timer_2:0 "Economic Recovery"
+HRE_Minor_defense:0 "Defense Against the Emperor"
+Rogue_Emperor:0 "Rogue Emperor"
