--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -211,3 +211,5 @@ gecko_ipa:0 "Favourable Lending Terms"
 gecko_tackle_debt_timer_2:0 "Economic Recovery"
 HRE_Minor_defense:0 "Defense Against the Emperor"
 Rogue_Emperor:0 "Rogue Emperor"
+turkmen_recruitment:0 "Turkmen Recruitment"
+erzincan_copper:0 "Erzincan Copper Mine"
