--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1514,7 +1514,8 @@
  push_back_colonizers:0 "Show Superiority"
  push_back_colonizers_desc:0 "War goal is to show them superiority by winning battles."
  MODIFIER_MONTHLY_PIETY_ACCELERATOR:0 "Monthly Piety Accelerator"
- CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE:0 "Cannot move Great Projects from $SUBJECTTYPES$." TRADE_COMPANY_AUTONOMY_MODIFIERS:0 "It will also have the following effects, modified by Local Autonomy (currently $AUTONOMY|%1R$):"
+ CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE:0 "Cannot move Great Projects from $SUBJECTTYPES$."
+ TRADE_COMPANY_AUTONOMY_MODIFIERS:0 "It will also have the following effects, modified by Local Autonomy (currently $AUTONOMY|%1R$):"
  OVERLORD_NAVAL_FORCE_LIMIT_MODIFIER:0 "Overlord Naval Force Limit Modifier"
  mechanic_can_change_primary_culture_no:0 "Forbids changing the Primary Culture."
  CANNOT_COLONIZE_CUT_OFF:0 "The closest neighbour ($PROVINCE$) is cut off from our capital."
@@ -1595,7 +1596,19 @@
  land_forcelimit:0 "Land Force Limit"
  naval_forcelimit:0 "Naval Force Limit"
  GREAT_PROJECT_CHARTER_COST:0 "$GREATPROJECT|Y$: "
- CS_REVOLUTION_CENTRE:0 "You cannot add Centers of Revolution to Client States."
+ CS_REVOLUTION_CENTRE:1 "You cannot add Centers of Revolution to your Subjects."
  ALLOW_ATTACH_CANNOT_EXILED:0 "Exiled Units cannot attach other armies."
  great_project_can_be_upgraded_instant:0 "Great Project(s) can be upgraded"
  great_project_can_be_upgraded_delayed:0 "The following Great Project(s) can be upgraded:\n$LIST$"
+ PEACE_OPTION_REQUIRES_OTHER_PEACE_OPTION:0 "Cannot demand this without also demanding $TREATYTYPE$."
+ COMMA:0 ", "
+ AND_LIST:0 ", and "
+ OR_LIST:0 ", or "
+ MODIFIER_RELATION_WITH_SAME_CULTURE:0 "Opinion of same Culture"
+ MODIFIER_RELATION_WITH_SAME_CULTURE_GROUP:0 "Opinion of same Culture Group"
+ MODIFIER_RELATION_WITH_ACCEPED_CULTURE:0 "Opinion of Accepted Culture"
+ MODIFIER_RELATION_WITH_OTHER_CULTURE:0 "Opinion of Non-Accepted Culture"
+ CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_TRIBUTARY:0 "$COUNTRY$ are not your Tributary State."
+ CENTRALIZE_STATE_NOPOWER:0 "You don't have enough Administrative Power to Centralize State. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
+ EXPAND_INFRASTRUCTURE_NOPOWER:0 "You don't have enough Administrative Power to Expand Infrastructure. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
+ EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "Expand your Province's infrastructure for $POWER_COST|Y$£adm."
