--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3771,3 +3771,9 @@ PROV6200:0 "Maastricht"
 PROV6201:0 "Zutphen"
 PROV6202:0 "Stellingwerven"
 PROV6203:0 "Nijmegen"
+PROV6204:0 "Bonn"
+PROV6205:0 "Sayn"
+PROV6206:0 "Idar-Oberstein"
+PROV6207:0 "Heilbronn"
+PROV6208:0 "Giessen"
+PROV6209:0 "Tarancon"
