--- a/localisation/gecko_units_and_tech_l_english.yml
+++ b/localisation/gecko_units_and_tech_l_english.yml
@@ -15,3 +15,4 @@
   ge_shaybani:0 "Shaybani"
   ge_tofongchis_musketeer:0 "Tofongchis Musketeer"
   ge_topchis_cavalry:0 "Topchis Cavalry"
+  ge_swedish_gallop:0 "Eastern Gallop Cavalry"
