--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -213,3 +213,4 @@ HRE_Minor_defense:0 "Defense Against the Emperor"
 Rogue_Emperor:0 "Rogue Emperor"
 turkmen_recruitment:0 "Turkmen Recruitment"
 erzincan_copper:0 "Erzincan Copper Mine"
+gecko_recovery:0 "Revanchism"
