--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -85,10 +85,15 @@ persian_nation_isfahan_desc:0 ""
 persian_nation_ardabil_title:0 "Form Persian Nation"
 persian_nation_ardabil_desc:0 ""
 
-splendor_mercs_1_title:0 "Hire Extra Mercenaries"
+splendor_mercs_1_title:0 "2. Recruit Surplus Mercenaries"
 splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Forcelimit."
 
-Show_Merc_limit_title:0 "Show Mercenary Forcelimit"
+splendor_mercs_2_title:0 "3. Modify Our Mercenary Contracts"
+splendor_mercs_2_desc:0 "We have the opportunity to modify the type of Mercenaries we employ with differing effects..."
+
+Show_Merc_limit_title:0 "1. Show Mercenary Forcelimit"
 Show_Merc_limit_desc:0 "This is our Mercenary Forcelimit. If we go over this, any newly created Mercenary Company will be disbanded with no refund."
 gecko_merc_limit_tt:0 "Manually Update Mercenary Forcelimit"
+gecko_increased_merc_limit_tt:0 "This will §GIncrease our Available Mercenaries by +25%§!, but they will have -§R15.0% Morale§! for 10 Years."
+gecko_decreased_merc_limit_tt:0 "This will §RDecrease our Available Mercenaries by -25%§!, but they will have +§G15.0% Combat Ability§! for 10 Years."
 				
