--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -214,3 +214,5 @@ Rogue_Emperor:0 "Rogue Emperor"
 turkmen_recruitment:0 "Turkmen Recruitment"
 erzincan_copper:0 "Erzincan Copper Mine"
 gecko_recovery:0 "Revanchism"
+increased_merc_recruitment:0 "Increased Mercenary Recruitment"
+increased_merc_quality:0 "Increased Mercenary Quality"
