--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -216,3 +216,4 @@ erzincan_copper:0 "Erzincan Copper Mine"
 gecko_recovery:0 "Revanchism"
 increased_merc_recruitment:0 "Increased Mercenary Recruitment"
 increased_merc_quality:0 "Increased Mercenary Quality"
+Over_merc_limit:0 "Over Mercenary Forcelimit"
