--- a/localisation/emperor_map_l_english.yml
+++ b/localisation/emperor_map_l_english.yml
@@ -89,8 +89,8 @@
  PROV_ADJ4732:0 "Terracinan"
  PROV4733:0 "Molise"
  PROV_ADJ4733:0 "Molisan"
- PROV4734:0 "Avellino"
- PROV_ADJ4734:0 "Avellinesi"
+ #PROV4734:0 "Avellino"
+ #PROV_ADJ4734:0 "Avellinesi"
  PROV4735:0 "Arborea"
  PROV_ADJ4735:0 "Arborean"
  PROV4736:0 "Trapani"
