--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -127,6 +127,7 @@
  desc_caliphate_proclaimed:0 "Our control over the holy sites and destruction of the Mamluke Sultanate mean that we can claim the title of Caliph for the first time since the great Muslim empires."
  defense_of_anatolia:0 "Defense of Anatolia"
  gc_anatolia_eyalet:0 "Anatolia Eyalet"
+ gc_defeated_byzantine_empire:0 "Defeated Byzantine Empire"
 
  #Portugal
  cape_trade_established:0 "Cape City Established"
