--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -112,3 +112,32 @@
   EOH_ideas_start:0 "Hungarian Traditions"
   EOH_ideas_bonus:0 "Hungarian Ambitions"
   MODIFIER_CAWA_COST:0 "Tercio Cost"
+
+  #persia
+ the_tupchi:0 "The Tupchiyan"
+ the_tupchi_desc:0 "Abbas has ordered the creation of an artillery corps, integrating the use of massed cannon into our newly reformed armies. Our use of combined firearms will ensure victory."
+ the_tofangchi:0 "Establish the Tufangchiyan"
+ the_tofangchi_desc:0 "Following a series of defeats, it is becoming evermore clear that our armies of Turkoman tribal supporters are struggling to keep pace on the battlefield with organized foot soldiers bearing firearms. We must learn from these defeats, and as such we will found our own corps of musketeers which will be outfitted with sophisticated firearms to handle any threat to our kingdom."
+ promotion_of_irrigation:0 "Promotion of Irrigation"
+ promotion_of_irrigation_desc:0 "If we encourage agriculture, we will increase our population so we will have more manpower for our army."
+ #ottomans
+ humbaraci_corps:0 "Establish the Humbaraci Corps"
+ humbaraci_corps_desc:0 "The Humbaraci Ocagi were in charge of the manufacturing, transportation, and use of cannons. The Ottoman army later established a workshop to cast humbaras in order to give the fire power of the artillery to the mobilized infantry groups."
+ #arabia
+ ARB_ideas:0 "Arabian Empire Ideas"
+ ARB_ideas_start:0 "Arabian Empire Traditions"
+ ARB_ideas_bonus:0 "Arabian Empire Ambition"
+ arb_1:0 "Indian Ocean Trade"
+ arb_1_desc:0 "Our sailors have been to the Swahili coasts and as far as Hindustan and even the Malay lands. We can play a critical role in the flow of goods between these wealthy regions."
+ arb_2:0 "Arabian Horsemanship"
+ arb_2_desc:0 "The man who rides for pleasure or military occupation has no idea what true horsemanship is. The Bedouin rides to trade, to eat, to live. It should surprise no one that, in addition to the finest horses, Arabia produces the finest cavalrymen."
+ arb_3:0 "Bedouin Raiders"
+ arb_3_desc:0 "Since before the days of the Prophet, Bedouins have been experts at the art of the raid. An army may march on its stomach, but it won't march far when our raiders take the food right out of the army's mouth through rapid hit and run seizures of their supply lines. Pull back and let the raiders do their work and watch as the invader dies of thirst."
+ arb_4:0 "Spreading the Prophet's Word"
+ arb_4_desc:0 "There is no god but Allah, Muhammad is His messenger. By now, all men should know these holy words, but a shocking amount still dwell in the pitiable state of ignorance of Islam. Our missionaries are ready to spread the words of the Prophet."
+ arb_5:0 "Unite the Tribes"
+ arb_5_desc:0 "Our loosely-organized way of handling our affairs has its upsides. Perhaps we could allow the tribes to continue providing for the upkeep of their own soldiers and horsemen while bringing them together in a more modern military pointed outwards rather than within?"
+ arb_6:0 "Bedouin Traders"
+ arb_6_desc:0 "There aren't many sharply-delineated man-made borders in Arabia, and even if there were, the Bedouin would ignore them. Though the Bedouin nomadic journeys through our lands and into others has risks, it also facilitates easy access to trade through the entire region, as Bedouin nomads know no import tariffs or trade embargoes."
+ arb_7:0 "Arabia"
+ arb_7_desc:0 "Although Arabia has many different clans, tribes and countries, all share in the use of the Arabic language, it forms the unifying feature of all Arabs. Under a strong leadership we can unite all Arabian lands under a single flag and one ruler."
