--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -237,3 +237,15 @@ gc_ven_la_francocrazia:0 "La Francocrazia"
 #milan
 
 gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
+
+######province modifiers######
+ northern_dvina_estuary_modifier:0 "Northern Dvina Estuary"
+ desc_northern_dvina_estuary_modifier:0 "Controlling the important river estuary of Northern Dvina strengthens our hold of the trade in the region."
+ house_of_wisdom:0 "House of Wisdom"
+ desc_house_of_wisdom:0 "House of Wisdom Description"
+ kaffa_slave_market:0 "Kaffa Slave Market"
+ desc_kaffa_slave_market:0 "In the late 13th century, traders from the Republic of Genoa arrived and purchased Kaffa from the ruling Golden Horde. They established a flourishing trading settlement, which virtually monopolized trade in the Black Sea region and served as a major port and administrative center for the Genoese settlements around the Sea. It came to house one of Europe's biggest slave markets, where captured Europeans from raids by the military of the Crimean Khanate and the Nogai Horde were sold."
+ karun_tributary_modifier:0 "Karun Tributary"
+ desc_karun_tributary_modifier:0 "Controlling the important tributary of Karun strengthens our hold of the trade in the region."
+ transcaucasian_wine_valleys:0 "Transcaucasian Wine Valleys"
+ desc_transcaucasian_wine_valleys:0 "The fertile valleys and protective slopes of Transcaucasia have made the region home to grapevine cultivation and wine production for millennia."
