--- a/localisation/gecko_prov_names_l_english.yml
+++ b/localisation/gecko_prov_names_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
+ PROV280:0 "Kyiv"
+ PROV1775:0 "Kiel"
+ PROV4370:1 "Cambridge"
  PROV5800:0 "Chegga"
  PROV5801:0 "Tindouf"
  PROV5802:0 "Sijilmasa"
@@ -185,3 +188,52 @@
  PROV6122:0 "Samos"
  PROV6123:0 "Lemnos"
  PROV6158:0 "Pantelleria"
+ PROV6159:0 "Gustrow"
+ PROV6160:0 "Parchim"
+ PROV6161:0 "Schwerin"
+ PROV6162:0 "Muncheburg"
+ PROV6163:0 "Furstenwalde"
+ PROV6164:0 "Oldesloe"
+ PROV6165:0 "Segeberg"
+ PROV6166:0 "Holstein"
+ PROV6167:0 "Pinneberg"
+ PROV6168:0 "Gluckstadt"
+ PROV6169:0 "Basel"
+ PROV6170:0 "Fribourg"
+ PROV6171:0 "Gruyere"
+ PROV6172:0 "Ticino"
+ PROV6173:0 "Lucerne"
+ PROV6174:0 "Toggenburg"
+ PROV6175:0 "Davos"
+ PROV6176:0 "Valtelina"
+ PROV6177:0 "Kammen"
+ PROV6178:0 "Pyritz"
+ PROV6179:0 "Lebus"
+ PROV6180:0 "Krems"
+ PROV6182:0 "Baden"
+ PROV6183:0 "Braunau"
+ PROV6184:0 "Amberg"
+ PROV6185:0 "Bruck"
+ PROV6186:0 "Neukurch"
+ PROV6187:0 "Suffolk"
+ PROV6188:0 "Bedford"
+ PROV6189:0 "Surrey"
+ PROV6190:0 "Berkshire"
+ PROV6191:0 "Wiltshire"
+ PROV6192:0 "Gandia"
+ PROV6193:0 "Loja"
+ PROV6194:0 "Aracena"
+ PROV6195:0 "Azuaga"
+ PROV6196:0 "Dunkirk"
+ PROV6197:0 "Nieuport"
+ PROV6199:0 "Mechelen"
+ PROV6200:0 "Maastricht"
+ PROV6201:0 "Zutphen"
+ PROV6202:0 "Stellingwerven"
+ PROV6203:0 "Nijmegen"
+ PROV6204:0 "Bonn"
+ PROV6205:0 "Sayn"
+ PROV6206:0 "Idar-Oberstein"
+ PROV6207:0 "Heilbronn"
+ PROV6208:0 "Giessen"
+ PROV6209:0 "Tarancon"
