--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -78,4 +78,72 @@
  gc_hungarian_nobles_privilege_9_desc:0 ""
  estate_burghers_indebted_to_burghers_2:0 "Further Indebted to the Burghers"
  estate_burghers_indebted_to_burghers_2_desc:0 ""
- estate_burghers_indebted_to_burghers_effect_2_tooltip:2 "Take §Y10§! five-year loans at §Y2.5%§! interest. The privilege will be removed automatically when repaid."
+ estate_burghers_indebted_to_burghers_effect_2_tooltip:2 "Take §Y5§! five-year loans at §Y2.5%§! interest. The privilege will be removed automatically when repaid."
+
+ ######estate privileges######
+ #clergy#
+ estate_church_negative_piety_privilege:0 "Sufi Ministers"
+ estate_church_negative_piety_privilege_desc:0 "If we listen to the advice of the [Root.GetClergyName] and place their concerns at the forefront of our mind, we may derive considerable benefits for our rule and see the people's faith in [Root.GetReligionNoun] greatly strengthened."
+ #mountain dev cost 
+ smeev_mountain_dev_cost:0 "Clergy Exploration Expeditions"
+ smeev_mountain_dev_cost_desc:0 "[Root.GetClergyName] roam our mountainous frontiers, shifting them back year by year. We should harness their pioneering instincts to accelerate our settlement of these areas."
+ PR_estate_clergy_exploration_expedition_mod:0 "Clergy Exploration"
+ desc_PR_estate_clergy_exploration_expedition_mod:0 "We are harnessing the pioneering instincts of the clergy to accelerate the settlement and growth of this area."
+ smeev_mountain_dev_cost_effect_tooltip:1 "§G-10%§! local development cost in all Mountain provinces."
+ smeev_mountain_dev_cost_mod_revoke_tooltip:0 "Removes §YClergy Exploration§! from all owned Mountain provinces."
+ #estate_safavid_order_militarized
+ estate_safavid_order_militarised:0 "Safavid Order Militarised"
+ estate_safavid_order_militarised_desc:0 "To wage war for our faith is the prime calling of all true believers."
+ estate_safavid_order_militarised_effect_tooltip:2 "Morale of Armies: §G+5%§! and Manpower Recovery: §G+10%§! when at war with heretics or heathens. \nMorale of Armies: §R-5%§! and Manpower Recovery Speed: §R-10%§! if at peace with heretics and heathens for 15 years."
+ #qizilbash#
+ #estate_qizilbash_land_rights
+ estate_qizilbash_land_rights:0 "Qizilbash Land Rights"
+ estate_qizilbash_land_rights_desc:0 "Granting the Qizilbash land will surely ensure their continued loyalty and service within our nation."
+ #estate_qizilbash_levies
+ estate_qizilbash_levies:0 "Qizilbash Levies"
+ estate_qizilbash_levies_desc:0 "If the reward of land is offered, the Turkoman Tribes will be more than willing to serve as the backbone of our armies."
+ estate_qizilbash_levies_effect_tooltip:0 "Every owned province of §YTurkoman Tribe§! culture gains §Y'Qizilbash Levies'§!, giving the following effects:\nLocal Manpower Modifier: §G+15.0%§!"
+ estate_qizilbash_levies_revoke_effect_tooltip:0 "The modifier §Y'Qizilbash Levies'§! is removed from all owned §YTurkoman Tribe§! provinces."
+ estate_qizilbash_levies_mod: "Qizilbash Levies"
+ desc_estate_qizilbash_levies_mod:0 "The state has increased its conscription of the Turkoman Tribes."
+ #estate_qizilbash_establish_qurchis
+ estate_qizilbash_establish_qurchis:0 "Establish Qurchi Corps"
+ estate_qizilbash_establish_qurchis_desc:0 "We have expanded the enlistment of the Qizilbash tribes to now also serve as a royal guard."
+ #estate_qizilbash_officer_corps
+ estate_qizilbash_officer_corps:0 "Qizilbash in Officer Corps"
+ estate_qizilbash_officer_corps_desc:0 "Qizilbash have been granted control over the Office of the Tufangchi-bashi and the Office of the Tupchi-bashi, directly involving them in the leadership of our armies."
+ estate_qizilbash_officer_corps_effect_tooltip:0 "Qizilbash gain control over the Office of the Tufangchi-bashi and the Office of the Tupchi-bashi."
+ estate_qizilbash_officer_corps_revoke_effect_tooltip:0 "The modifier §Y'Qizilbash Officers'§! is removed."
+ estate_qizilbash_officers_modifier: "Qizilbash Officers"
+ #estate_qizilbash_disciplined_enforced
+ estate_qizilbash_disciplined_enforced:0 "Enforced Discipline"
+ estate_qizilbash_disciplined_enforced_desc:0 "We have enforced ruthless discipline on our armies, severely punishing any attempt to extract war plunder for personal gain."
+ #ghilman#
+ #estate_ghilman_land_rights
+ estate_ghilman_land_rights:0 "Ghilman Land Rights"
+ estate_ghilman_land_rights_desc:0 "Granting governorships and land to the Ghilman will further increase their loyalty and reduce our reliance on the Qizilbash."
+ #estate_ghilman_military_corps
+ estate_ghilman_military_corps:0 "Ghilman Military Corps"
+ estate_ghilman_military_corps_desc:0 "We have enforced ruthless discipline on the Ghilman, severely punishing any attempt to extract war plunder for personal gain."
+ estate_ghilman_discipline_modifier:0 "Ghilman Military Corps"
+ #estate_ghilman_morale
+ estate_ghilman_morale:0 "Reform the Ghilman Corps"
+ estate_ghilman_morale_desc:0 "Further drilling led by our foreign advisors has resulted in the increased effectiveness of our Ghilman corps."
+ estate_ghilman_morale_modifier:0 "Reform the Ghilman Corps"
+ #janissaries#
+ #estate_janissary_phase_base
+ estate_janissary_phase_base:0 "Train Against Offensive Maneuvers"
+ estate_janissary_phase_base_desc:0 "Janissaries began as an elite corps of infantry, famed for their internal cohesion cemented by strict discipline and order. This prevented them from breaking to the offensive maneuvers of enemies designed to force a retreat, keeping a solid central line of infantry."
+ estate_janissary_phase_modifier:0 "Defensive Tactics"
+ #estate_janissary_upgrade_weaponry
+ estate_janissary_upgrade_weaponry:0 "Upgrade Janissary Weaponry"
+ estate_janissary_upgrade_weaponry_desc:0 "Janissaries were expert archers, but became early adopters of firearms. New technology has led to the development of better firearms, and they should follow in their tradition and adopt the use of these better firearms."
+ estate_janissary_weaponry_modifier:0 "Upgraded Weaponry"
+ #estate_janissary_auxiliaries
+ estate_janissary_auxiliaries:0 "Establish Janissary Auxiliary Corps"
+ estate_janissary_auxiliaries_desc:0 "The Janissary Corps maintained a vast network of auxiliary support for any campaigns the Sultan would command. The Janissary Corps had its own internal medical auxiliaries: Muslim and Jewish surgeons who would travel with the corps during campaigns and had organized methods of moving the wounded and the sick to traveling hospitals behind the lines. There was also the Djerbedji Corps, who were to carry and distribute weapons and ammunition on extended campaigns."
+ estate_janissary_auxiliaries_modifier:0 "Janissary Auxiliaries"
+ #estate_janissary_reform_the_janissaries
+ estate_janissary_reform_the_janissaries:0 "Reform the Janissary Corps"
+ estate_janissary_reform_the_janissaries_desc:0 "Having chosen to keep the Janissary Corps as our primary infantry corps, we will ensure they remain loyal to the Sultan and update their methods of warfare to match the growing threat of Western technology and military tactics."
+ estate_janissary_discipline_modifier:0 "Reformed Janissaries"
