merc delay effect added

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -251,3 +251,4 @@ gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
  desc_transcaucasian_wine_valleys:0 "The fertile valleys and protective slopes of Transcaucasia have made the region home to grapevine cultivation and wine production for millennia."
 
  gc_mecca_agreement:0 "Warriors of the Faith"
+ merc_recruited:0 "Travel time to these provinces is delayed until our Mercenaries can organise."
