experimental merc menu added

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -89,7 +89,7 @@ persian_nation_ardabil_desc:0 ""
 splendor_mercs_1_title:0 "2. Recruit Surplus Mercenaries"
 splendor_mercs_1_desc:0 "Allows further Mercenary recruitment to Mercenary Forcelimit."
 
-splendor_mercs_2_title:0 "3. Modify Our Mercenary Contracts"
+splendor_mercs_2_title:0 "3. Hire Further Mercenaries"
 splendor_mercs_2_desc:0 "We have the opportunity to modify the type of Mercenaries we employ with differing effects..."
 
 Show_Merc_limit_title:0 "1. Show Mercenary Forcelimit"
