France scales more through missions

--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -253,4 +253,5 @@ gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
  gc_mecca_agreement:0 "Warriors of the Faith"
  merc_recruited:0 "Travel time to these provinces is delayed until our Mercenaries can organise."
  gc_nap_italian_wars_modifier:0 "Victory in the Italian Wars"
+ gc_Letat_cest_moi:0 "L'Etat, c'est moi"
  
