--- a/localisation/gecko_events_l_english.yml
+++ b/localisation/gecko_events_l_english.yml
@@ -82,6 +82,7 @@
  gecko.11.j:0 "Recruit Quartermaster"
  gecko.11.k:0 "Recruit Artillery Officer"
  gecko.11.l:0 "Recruit Army Organiser"
+ gecko.11.m:0 "Do Nothing"
 
  #Ethiopia Mission Events
  gc_eth_events.1.t:0 "Legacy of Prester John"
