--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -242,6 +242,8 @@ gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
 
 gc_mug_formation_hope:0 "Indian Raid"
 
+
+gc_west_african_integration:0 "West African Integration"
 ######province modifiers######
  northern_dvina_estuary_modifier:0 "Northern Dvina Estuary"
  desc_northern_dvina_estuary_modifier:0 "Controlling the important river estuary of Northern Dvina strengthens our hold of the trade in the region."
