--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -242,7 +242,7 @@ gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
 
 gc_mug_formation_hope:0 "Indian Raid"
 
-
+berber_fury_2:0 "Berber Fury"
 gc_west_african_integration:0 "West African Integration"
 ######province modifiers######
  northern_dvina_estuary_modifier:0 "Northern Dvina Estuary"
