Decision to create a CoT added

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -122,3 +122,6 @@ gecko_decreased_merc_limit_tt:0 "This will §RDecrease our Available Mercenaries
  yoklama_effect_tooltip:0 "§RThe Janissaries estate will be removed entirely and all Janissary related government reforms and privileges will be lost. However, this brings an opportunity to reform the army..§!"
  force_janissaries_to_undergo_yoklama:0 "§YPost-Janissary Army Reform§!"
  
+#trade hub
+ Create_a_Trade_Hub_title:0 "Create a Center of Trade"
+ Create_a_Trade_Hub_desc:0 "At least one of our province has become a trade hub and could potentially become a center of trade, our merchants say. They would however, need some investment to make this happen."
